--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,17 +10,14 @@ jobs:
       - name: Dep install
         run: |
           sudo apt-get update
-          sudo apt install gcc-multilib
+          sudo apt-get install -y gcc-multilib g++-multilib binutils python3-setuptools
           git clone https://github.com/alliedmodders/sourcemod --recursive -b 1.10-dev
           git clone https://github.com/alliedmodders/metamod-source -b 1.10-dev
           git clone https://github.com/alliedmodders/hl2sdk -b csgo hl2sdk-csgo
           git clone -b 2.1-distutils https://github.com/alliedmodders/ambuild
-      - name: Build
-        run: |
           cd ambuild
           sudo python3 setup.py install
           cd ..
-          mkdir build
-          cd build
-          python ../configure.py --enable-optimize --mms-path "./metamod-source" --sm-path "./sourcemod" --hl2sdk-root . --sdks csgo
-          ambuild
+      - name: Build
+        run: |
+          bash ./ci/build.sh
