--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,8 +20,4 @@ jobs:
           cd ..
       - name: Build
         run: |
-          EXT_DIR=$(pwd)
-          mkdir build
-          cd build
-          python3 ${EXT_DIR}/configure.py --enable-optimize --mms-path "${EXT_DIR}/metamod-source" --sm-path "${EXT_DIR}/sourcemod" --hl2sdk-root "${EXT_DIR}" --sdk csgo
-          ambuild
+          bash ./ci/build.sh
